--- a/app/src/main/res/layout/activity_add_journey.xml
+++ b/app/src/main/res/layout/activity_add_journey.xml
@@ -6,4 +6,51 @@
     android:layout_height="match_parent"
     tools:context=".AddJourney">
 
+    <EditText
+        android:id="@+id/title"
+        android:layout_width="380dp"
+        android:layout_height="wrap_content"
+        android:hint="Journey's Title"
+        android:textSize="24sp"
+        android:layout_marginTop="100sp"
+        android:layout_marginStart="10sp"
+        android:layout_marginEnd="10sp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent">
+
+    </EditText>
+
+    <EditText
+        android:id="@+id/description"
+        android:layout_width="380dp"
+        android:layout_height="300sp"
+        android:hint="Your thoughts about the journey"
+        android:textSize="24sp"
+        android:layout_marginTop="20sp"
+        android:layout_marginStart="10sp"
+        android:layout_marginEnd="10sp"
+        app:layout_constraintTop_toBottomOf="@id/title"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent">
+
+    </EditText>
+
+    <Button
+        android:id="@+id/add"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Add"
+        android:textSize="26sp"
+        android:textStyle="bold"
+        android:layout_marginTop="20sp"
+        android:textColor="@color/white"
+        android:backgroundTint="#0ED6B9"
+        app:layout_constraintTop_toBottomOf="@id/description"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent">
+
+    </Button>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
