--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -16,18 +16,32 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
+    </Button>
+
+    <Button
+        android:id="@+id/add_journey"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Add journey"
+        android:textSize="15sp"
+        android:layout_marginStart="10sp"
+        android:layout_marginEnd="130sp"
+        android:layout_marginTop="10sp"
+        app:layout_constraintRight_toLeftOf="@id/signOut"
+        app:layout_constraintTop_toTopOf="parent">
 
     </Button>
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <ListView
+        android:id="@+id/list_journeys"
+        android:layout_width="409dp"
+        android:layout_height="296dp"
+        android:layout_marginTop="30sp"
+        android:layout_marginLeft="10sp"
+        android:layout_marginRight="10sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/signOut"
+        app:layout_constraintRight_toRightOf="parent"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
