--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Journey Journal"
-        android:textSize="60sp"
+        android:textSize="50sp"
+        android:textAlignment="center"
         android:fontFamily="sans-serif-black"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -26,6 +27,7 @@
         android:text="Welcome traveler!"
         android:textSize="18sp"
         android:textStyle="italic"
+        android:layout_marginTop="10sp"
         app:layout_constraintTop_toBottomOf="@+id/banner"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent">
@@ -40,6 +42,8 @@
         android:textSize="24sp"
         android:hint="Email Address"
         android:inputType="textEmailAddress"
+        android:layout_marginRight="10sp"
+        android:layout_marginLeft="10sp"
         app:layout_constraintTop_toBottomOf="@+id/welcome"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent">
@@ -54,6 +58,8 @@
         android:textSize="24sp"
         android:inputType="textPassword"
         android:hint="Password"
+        android:layout_marginRight="10sp"
+        android:layout_marginLeft="10sp"
         app:layout_constraintTop_toBottomOf="@+id/email"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent">
@@ -61,8 +67,8 @@
 
     <Button
         android:id="@+id/signIn"
-        android:layout_width="380dp"
-        android:layout_height="70dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:backgroundTint="#0ED6B9"
         android:text="Login"
@@ -76,15 +82,16 @@
 
     <TextView
         android:id="@+id/register"
-        android:layout_width="wrap_content"
+        android:layout_width="190sp"
         android:layout_height="wrap_content"
         android:text="Not a user? Register!"
         android:textSize="16sp"
         android:textStyle="bold"
+        android:textAlignment="center"
         app:layout_constraintTop_toBottomOf="@id/signIn"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginRight="80dp"
-        android:layout_marginTop="50dp">
+        android:layout_marginEnd="111sp"
+        android:layout_marginTop="40dp">
     </TextView>
 
 
