--- a/app/src/main/res/layout/activity_register_user.xml
+++ b/app/src/main/res/layout/activity_register_user.xml
@@ -11,7 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Journey Journal"
-        android:textSize="60sp"
+        android:textSize="50sp"
+        android:textAlignment="center"
         android:fontFamily="sans-serif-black"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -26,6 +27,7 @@
         android:text="Please fill in the form"
         android:textSize="18sp"
         android:textStyle="italic"
+        android:layout_marginTop="10sp"
         app:layout_constraintTop_toBottomOf="@+id/banner"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent">
@@ -40,6 +42,8 @@
         android:hint="First Name"
         android:inputType="text"
         android:textSize="24sp"
+        android:layout_marginRight="10sp"
+        android:layout_marginLeft="10sp"
         app:layout_constraintTop_toBottomOf="@+id/regMessage"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent">
@@ -54,6 +58,8 @@
         android:hint="Email"
         android:inputType="textEmailAddress"
         android:textSize="24sp"
+        android:layout_marginRight="10sp"
+        android:layout_marginLeft="10sp"
         app:layout_constraintTop_toBottomOf="@+id/firstName"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent">
@@ -68,6 +74,8 @@
         android:hint="Password"
         android:inputType="textPassword"
         android:textSize="24sp"
+        android:layout_marginRight="10sp"
+        android:layout_marginLeft="10sp"
         app:layout_constraintTop_toBottomOf="@+id/email"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent">
@@ -75,8 +83,8 @@
 
     <Button
         android:id="@+id/registerUser"
-        android:layout_width="380dp"
-        android:layout_height="70dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:backgroundTint="#0ED6B9"
         android:text="Register user"
