--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -6,6 +6,8 @@
     android:layout_height="match_parent"
     tools:context=".HomePage">
 
+
+
     <Button
         android:id="@+id/signOut"
         android:layout_width="wrap_content"
@@ -33,15 +35,13 @@
     </Button>
 
     <ListView
-        android:id="@+id/list_journeys"
-        android:layout_width="409dp"
-        android:layout_height="296dp"
-        android:layout_marginTop="30sp"
-        android:layout_marginLeft="10sp"
-        android:layout_marginRight="10sp"
+        android:id="@+id/listView"
+        android:layout_width="match_parent"
+        android:layout_height="380sp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/signOut"
-        app:layout_constraintRight_toRightOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/add_journey"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
