--- a/app/src/main/res/layout/activity_add_journey.xml
+++ b/app/src/main/res/layout/activity_add_journey.xml
@@ -12,9 +12,7 @@
         android:layout_height="wrap_content"
         android:hint="Journey's Title"
         android:textSize="24sp"
-        android:layout_marginTop="100sp"
-        android:layout_marginStart="10sp"
-        android:layout_marginEnd="10sp"
+        android:layout_marginTop="40dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent">
@@ -24,17 +22,60 @@
     <EditText
         android:id="@+id/description"
         android:layout_width="380dp"
-        android:layout_height="300sp"
+        android:layout_height="200sp"
         android:hint="Your thoughts about the journey"
         android:textSize="24sp"
         android:layout_marginTop="20sp"
-        android:layout_marginStart="10sp"
-        android:layout_marginEnd="10sp"
-        app:layout_constraintTop_toBottomOf="@id/title"
+        app:layout_constraintTop_toBottomOf="@id/image"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent">
 
     </EditText>
+
+    <TextView
+        android:id="@+id/select_option"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Select method:"
+        android:textAlignment="center"
+        android:textSize="17dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginStart="20dp"
+        app:layout_constraintTop_toBottomOf="@id/title"
+        app:layout_constraintLeft_toRightOf="@id/image"/>
+
+
+    <ImageView
+        android:id="@+id/image"
+        android:layout_width="250dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/upload_camera"
+        app:layout_constraintTop_toBottomOf="@id/title"/>
+
+    <Button
+        android:id="@+id/upload_camera"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="70dp"
+        android:text="Upload Camera"
+        android:textSize="10dp"
+        android:layout_marginEnd="20dp"
+        app:layout_constraintTop_toBottomOf="@id/title"
+        app:layout_constraintRight_toRightOf="parent" />
+
+    <Button
+        android:id="@+id/upload_gallery"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="Upload Gallery"
+        android:layout_marginEnd="20dp"
+        android:textSize="10dp"
+        app:layout_constraintTop_toBottomOf="@id/upload_camera"
+        app:layout_constraintRight_toRightOf="parent" />
+
 
     <Button
         android:id="@+id/add"
