--- a/app/src/main/res/layout/activity_add_journey.xml
+++ b/app/src/main/res/layout/activity_add_journey.xml
@@ -51,30 +51,21 @@
         android:layout_height="200dp"
         android:layout_marginTop="20dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/upload_camera"
+        app:layout_constraintRight_toLeftOf="@id/uploadOption"
         app:layout_constraintTop_toBottomOf="@id/title"/>
 
     <Button
-        android:id="@+id/upload_camera"
+        android:id="@+id/uploadOption"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="70dp"
-        android:text="Upload Camera"
+        android:text="Upload Image"
         android:textSize="10dp"
         android:layout_marginEnd="20dp"
         app:layout_constraintTop_toBottomOf="@id/title"
         app:layout_constraintRight_toRightOf="parent" />
 
-    <Button
-        android:id="@+id/upload_gallery"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="Upload Gallery"
-        android:layout_marginEnd="20dp"
-        android:textSize="10dp"
-        app:layout_constraintTop_toBottomOf="@id/upload_camera"
-        app:layout_constraintRight_toRightOf="parent" />
+
 
 
     <Button
