--- a/app/src/main/res/layout/activity_add_journey.xml
+++ b/app/src/main/res/layout/activity_add_journey.xml
@@ -26,23 +26,12 @@
         android:hint="Your thoughts about the journey"
         android:textSize="24sp"
         android:layout_marginTop="20sp"
-        app:layout_constraintTop_toBottomOf="@id/image"
+        app:layout_constraintTop_toBottomOf="@id/title"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent">
 
     </EditText>
 
-    <TextView
-        android:id="@+id/select_option"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Select method:"
-        android:textAlignment="center"
-        android:textSize="17dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginStart="20dp"
-        app:layout_constraintTop_toBottomOf="@id/title"
-        app:layout_constraintLeft_toRightOf="@id/image"/>
 
 
     <ImageView
@@ -51,38 +40,24 @@
         android:layout_height="200dp"
         android:layout_marginTop="20dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/uploadOption"
-        app:layout_constraintTop_toBottomOf="@id/title"/>
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/description"/>
 
     <Button
         android:id="@+id/uploadOption"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="70dp"
-        android:text="Upload Image"
-        android:textSize="10dp"
-        android:layout_marginEnd="20dp"
-        app:layout_constraintTop_toBottomOf="@id/title"
-        app:layout_constraintRight_toRightOf="parent" />
+        android:layout_marginTop="20dp"
+        android:text="Upload Journey"
+        android:textSize="20dp"
+        app:layout_constraintTop_toBottomOf="@id/image"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"/>
 
 
 
 
-    <Button
-        android:id="@+id/add"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Add"
-        android:textSize="26sp"
-        android:textStyle="bold"
-        android:layout_marginTop="20sp"
-        android:textColor="@color/white"
-        android:backgroundTint="#0ED6B9"
-        app:layout_constraintTop_toBottomOf="@id/description"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent">
 
-    </Button>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
