--- a/app/src/main/res/layout/activity_add_journey.xml
+++ b/app/src/main/res/layout/activity_add_journey.xml
@@ -50,6 +50,7 @@
         android:layout_marginTop="20dp"
         android:text="Upload Journey"
         android:textSize="20dp"
+        android:backgroundTint="#0ED6B9"
         app:layout_constraintTop_toBottomOf="@id/image"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"/>
