--- a/app/src/main/res/layout/activity_edit_journey.xml
+++ b/app/src/main/res/layout/activity_edit_journey.xml
@@ -6,11 +6,23 @@
     android:layout_height="match_parent"
     tools:context=".EditJourney">
 
+    <ImageButton
+        android:id="@+id/share"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:backgroundTint="@color/white"
+        android:src="@drawable/ic_baseline_share_24"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+
     <EditText
         android:id="@+id/title"
         android:layout_width="300sp"
         android:layout_height="60sp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="60dp"
         android:hint="Journey's title"
         android:textSize="26dp"
         app:layout_constraintTop_toTopOf="parent"
@@ -24,7 +36,20 @@
         android:layout_marginTop="10dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tap_select"/>
+
+    <TextView
+        android:id="@+id/tap_select"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="15dp"
+        android:text="Tap image to edit image:"
+        android:textAlignment="center"
+        android:layout_marginTop="10dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/title"/>
+
 
     <EditText
         android:id="@+id/description"
@@ -41,6 +66,7 @@
         android:layout_height="wrap_content"
         android:textSize="26dp"
         android:text="Edit"
+        android:backgroundTint="#0ED6B9"
         android:layout_marginTop="20dp"
         android:layout_marginStart="30dp"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -50,6 +76,7 @@
         android:id="@+id/delete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:backgroundTint="#0ED6B9"
         android:textSize="26dp"
         android:text="Delete"
         android:layout_marginTop="20dp"
