--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -13,6 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/sign_out"
+        android:backgroundTint="#0ED6B9"
         android:layout_marginTop="10sp"
         android:layout_marginStart="280sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -26,6 +27,7 @@
         android:layout_height="wrap_content"
         android:text="Add journey"
         android:textSize="15sp"
+        android:backgroundTint="#0ED6B9"
         android:layout_marginStart="10sp"
         android:layout_marginEnd="130sp"
         android:layout_marginTop="10sp"
@@ -33,17 +35,6 @@
         app:layout_constraintTop_toTopOf="parent">
 
     </Button>
-
-
-
-    <Button
-        android:id="@+id/refresh"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Refresh"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/recyclerView"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
