--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -8,42 +8,33 @@
 
 
 
-    <Button
-        android:id="@+id/signOut"
+    <TextView
+        android:id="@+id/welcome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/sign_out"
-        android:backgroundTint="#0ED6B9"
-        android:layout_marginTop="10sp"
-        android:layout_marginStart="280sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-    </Button>
-
-    <Button
-        android:id="@+id/add_journey"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Add journey"
-        android:textSize="15sp"
-        android:backgroundTint="#0ED6B9"
-        android:layout_marginStart="10sp"
-        android:layout_marginEnd="130sp"
-        android:layout_marginTop="10sp"
-        app:layout_constraintRight_toLeftOf="@id/signOut"
-        app:layout_constraintTop_toTopOf="parent">
-
-    </Button>
+        android:textSize="22dp"
+        android:text="Welcome"
+        android:textColor="@color/black"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="10dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="380sp"
-        android:layout_marginTop="20dp"
+        android:layout_height="550sp"
+        android:layout_marginTop="30dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/add_journey"  />
+        app:layout_constraintTop_toBottomOf="@id/welcome"  />
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/navBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:menu="@menu/bottom_navigation_menu"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
