--- a/app/src/main/res/layout/activity_edit_journey.xml
+++ b/app/src/main/res/layout/activity_edit_journey.xml
@@ -6,6 +6,8 @@
     android:layout_height="match_parent"
     tools:context=".EditJourney">
 
+    <!-- Share functionality -->
+
     <ImageButton
         android:id="@+id/share"
         android:layout_width="50dp"
@@ -17,7 +19,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
-
+    <!-- Edit journey's title -->
     <EditText
         android:id="@+id/title"
         android:layout_width="300sp"
@@ -29,6 +31,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
 
+    <!-- Edit Image/See image -->
     <ImageView
         android:id="@+id/journey_image"
         android:layout_width="300sp"
@@ -37,6 +40,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tap_select"/>
+
 
     <TextView
         android:id="@+id/tap_select"
@@ -50,16 +54,17 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/title"/>
 
-
+    <!-- Edit journey's description -->
     <EditText
         android:id="@+id/description"
-        android:layout_width="360dp"
+        android:layout_width="300dp"
         android:layout_height="200dp"
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/journey_image"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
 
+    <!-- Buttons to edit or delete entry -->
     <Button
         android:id="@+id/edit"
         android:layout_width="wrap_content"
@@ -68,7 +73,7 @@
         android:text="Edit"
         android:backgroundTint="#0ED6B9"
         android:layout_marginTop="20dp"
-        android:layout_marginStart="30dp"
+        app:layout_constraintRight_toLeftOf="@id/delete"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/description"/>
 
@@ -80,7 +85,7 @@
         android:textSize="26dp"
         android:text="Delete"
         android:layout_marginTop="20dp"
-        android:layout_marginStart="110dp"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/description"
         app:layout_constraintLeft_toRightOf="@id/edit"/>
 
