--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity" >
 
+    <!-- Login functionality -->
     <TextView
         android:id="@+id/banner"
         android:layout_width="match_parent"
@@ -24,7 +25,7 @@
         android:id="@+id/welcome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Welcome traveler!"
+        android:text="Welcome traveller!"
         android:textSize="18sp"
         android:textStyle="italic"
         android:layout_marginTop="10sp"
@@ -35,7 +36,7 @@
 
     <EditText
         android:id="@+id/email"
-        android:layout_width="380dp"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
         android:ems="10"
@@ -51,7 +52,7 @@
 
     <EditText
         android:id="@+id/password"
-        android:layout_width="380dp"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:ems="10"
@@ -88,10 +89,10 @@
         android:textSize="16sp"
         android:textStyle="bold"
         android:textAlignment="center"
+        android:layout_marginTop="25dp"
         app:layout_constraintTop_toBottomOf="@id/signIn"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginEnd="111sp"
-        android:layout_marginTop="40dp">
+        app:layout_constraintLeft_toLeftOf="parent">
     </TextView>
 
 
