--- a/app/src/main/res/layout/activity_register_user.xml
+++ b/app/src/main/res/layout/activity_register_user.xml
@@ -6,6 +6,8 @@
     android:layout_height="match_parent"
     tools:context=".RegisterUser">
 
+
+    <!-- Register Functionality -->
     <TextView
         android:id="@+id/banner"
         android:layout_width="match_parent"
@@ -35,7 +37,7 @@
 
     <EditText
         android:id="@+id/firstName"
-        android:layout_width="380dp"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
         android:ems="10"
@@ -51,7 +53,7 @@
 
     <EditText
         android:id="@+id/email"
-        android:layout_width="380dp"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:ems="10"
@@ -67,7 +69,7 @@
 
     <EditText
         android:id="@+id/password"
-        android:layout_width="380dp"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:ems="10"
