--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -27,13 +27,25 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="30dp"
             android:layout_toEndOf="@id/image"
             android:padding="3dp"
             android:text="Title"
             android:textSize="26dp"
             android:textAlignment="center"
             android:textColor="@color/black" />
+
+        <!-- Text view to display the date of entry -->
+        <TextView
+            android:id="@+id/date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Date"
+            android:textSize="15dp"
+            android:layout_marginLeft="10dp"
+            android:textAlignment="center"
+            android:layout_toEndOf="@id/image"
+            android:layout_marginTop="80dp"/>
 
 
 
