--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -95,5 +95,54 @@
         app:layout_constraintLeft_toLeftOf="parent">
     </TextView>
 
+    <TextView
+        android:id="@+id/other_methods"
+        android:layout_width="190sp"
+        android:layout_height="wrap_content"
+        android:text="Other sign in options:"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        android:textAlignment="center"
+        android:layout_marginTop="25dp"
+        app:layout_constraintTop_toBottomOf="@id/register"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent">
+    </TextView>
+
+    <ImageButton
+        android:id="@+id/google"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:src="@drawable/google"
+        android:layout_marginStart="135dp"
+        android:layout_marginTop="20dp"
+        android:background="@android:color/transparent"
+        android:scaleType="fitXY"
+        app:layout_constraintTop_toBottomOf="@id/other_methods"
+        app:layout_constraintRight_toLeftOf="@id/facebook"
+        app:layout_constraintLeft_toLeftOf="parent"/>
+    <ImageButton
+        android:id="@+id/facebook"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:src="@drawable/facebook"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="20dp"
+        android:background="@android:color/transparent"
+        android:scaleType="fitXY"
+        app:layout_constraintTop_toBottomOf="@id/other_methods"
+        app:layout_constraintLeft_toRightOf="@id/google"/>
+    <ImageButton
+        android:id="@+id/microsoft"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:src="@drawable/microsoft"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="20dp"
+        android:background="@android:color/transparent"
+        android:scaleType="fitXY"
+        app:layout_constraintTop_toBottomOf="@id/other_methods"
+        app:layout_constraintLeft_toRightOf="@id/facebook"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
