--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -47,6 +47,26 @@
             android:layout_toEndOf="@id/image"
             android:layout_marginTop="80dp"/>
 
+        <TextView
+            android:id="@+id/tap_to_edit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="(Edit)"
+            android:textSize="15dp"
+            android:layout_marginLeft="163dp"
+            android:textAlignment="center"
+            android:layout_toEndOf="@id/image"
+            android:layout_marginTop="70dp"
+            />
+
+        <ImageView
+            android:id="@+id/edit_journey"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/ic_baseline_edit_24"
+            android:layout_marginLeft="300dp"
+            android:layout_marginTop="30dp"/>
+
 
 
 
